--- a/_config.yml
+++ b/_config.yml
@@ -21,18 +21,18 @@ footer-links:
   email: mails4abhi@yahoo.com
   facebook: 
   flickr: 
-  github: barryclark/jekyll-now
+  github: bajubullet
   instagram: 
   linkedin: in.linkedin.com/in/abhibajpai/
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: bajubullet
+  twitter: abhisome
 
 # Your disqus shortname, entering this will enable commenting on posts
 disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-53446174-1
+google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
