--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr: 
   github: bajubullet
   instagram: 
-  linkedin: in.linkedin.com/in/abhibajpai/
+  linkedin: https://www.linkedin.com/in/abhibajpai/
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: abhisome
