--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars3.githubusercontent.com/u/2325157
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: mails4abhi@yahoo.com
+  email: abajpaimail@gmail.com
   facebook: 
   flickr: 
   github: bajubullet
